# solana-wallet-tracker

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/routes/: mod.rs
frontend/: README.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ActivityChart.tsx  ActivityTable.tsx  StatsCard.tsx  WalletInput.tsx
frontend/src/lib/api/: index.ts
frontend/src/lib/utils/: index.ts
frontend/src/types/: wallet.ts
