[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
solana-client = "3.1.8"
solana-sdk = "3.0.0"
solana-transaction-status = "3.1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.8", features = ["cors"] }
http = "1.0"
chrono = "0.4"
